--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ body
     --scndry-font:'poppins';
 }
 
-p
+p,a
 {
     font-family: var(--scndry-font);
 }
@@ -1020,4 +1020,28 @@ path
         background:#000 !important;
 
     } */
+
+    .offcanvas
+    {
+        background: #000 !important;
+        position: fixed !important;
+        height: 100vh;
+    }
+    .offcanvas li .nav-link
+    {
+        color: #fff;
+        width: fit-content;
+    }
+    .offcanvas .navbar-nav .nav-link.show
+    {
+        color: #fff !important;
+    }
+    .offcanvas-header .btn-close
+    {
+        background: url(../img/icons/offcanvas-close.svg);
+        background-size: contain;
+        width: 5px;
+        height: 5px;
+        opacity: 1;
+    }
 }
