--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -583,6 +583,7 @@ path
     padding: 5% 2%;
     background: rgba(0, 0, 0, 0.30);
     backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(30px);
     z-index:1;
     border-radius: 20px;
     display: flex;
@@ -1513,7 +1514,7 @@ path
 }
 
 
-@media only screen and (max-width: 768px)
+@media only screen and (max-width: 320px)
 {
     .container
     {
