--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @font-face {
-    font-family: 'metropolis';
+    font-family:'Metropolis';
     src: url('assets/fonts/Metropolis-Regular.otf');
 }
 
@@ -26,13 +26,17 @@ body
 {
     --grade-1:#70C17E;
     --grade-2:#3B56A5;
-    --main-font:'metropolis';
+    --main-font:'Metropolis';
     --scndry-font:'poppins';
 }
 
 p,a
 {
     font-family: var(--scndry-font);
+}
+h1,h2,h3,h4,h5,h6
+{
+    font-family: 'Metropolis';
 }
 
 
@@ -302,13 +306,13 @@ transition: .3s ease;
 #herobanner-section .banner-title
 {
     font-size: 72px;
-    font-family: 'metropolis';
+    font-family: 'Metropolis';
     font-weight: 700;
     color: #fff;
 }
 #herobanner-section .banner-title .main-grade
 {
-    -webkit-text-fill-color: #ffffff54;
+    -webkit-text-fill-color: #ffffff;
     -webkit-transition: .3s ease;
     transition: .3s ease;
 
@@ -396,7 +400,7 @@ path
 .main-title
 {
     font-size: 40px;
-    font-family: var(--main-font);
+    font-family: 'Metropolis';
     font-weight: 700;
     margin: 0;;
 }
@@ -599,8 +603,8 @@ path
 #ctasection .cta-main .main-para
 {
     color: #fff;
-    font-size: 14px;
-    padding: 0 10%;
+    font-size: 16px;
+    padding: 0 15%;
     margin: 0;
 }
 #ctasection .cta-main .main-btn
@@ -721,7 +725,7 @@ path
     font-size: 18px;
     font-weight: 500;
     width: fit-content;
-    font-family: var(--main-font);
+    font-family: 'Metropolis';
 }
 #blogsection .blog-desc .top-blog
 {
@@ -755,7 +759,7 @@ path
 {
     font-weight: 700;
     font-size: 20px;
-    font-family: var(--main-font);
+    font-family: 'Metropolis';
     line-height: 22px;
     margin: 0;
 }
@@ -1133,6 +1137,10 @@ path
     {
         right:-7%;
     }
+    #servicesection .services .img-div
+    {
+        border-radius: 15px;
+    }
 
 
     #ctasection
@@ -1341,7 +1349,8 @@ path
     {
         width: 90%;
         font-size: 14px;
-        letter-spacing: .2px;
+        /* letter-spacing: .2px; */
+        line-height: 140%;
     }
     #herosection
     {
@@ -1415,6 +1424,12 @@ path
     {
         margin-top:30px;
     }
+    .top-hexa
+    {
+        scale:.6;
+        right:-15%;
+        bottom: -40%;
+    }
 
 
 
@@ -1433,8 +1448,12 @@ path
     {
         padding: 0 4%;
         text-align: center;
+        font-size: 14px;
     }
-
+    #ctasection .container
+    {
+        padding: 0 10px !important;
+    }
     #ctasection .cta-main
     {
         gap:10px;
@@ -1448,10 +1467,7 @@ path
     {
         padding: 5px 30px;
     }
-    .container
-    {
-        padding: 0 20px !important;
-    }
+    
 
 
     #social-section
@@ -1460,11 +1476,16 @@ path
     }
     #social-section .left
     {
-        gap:10px;
+        gap:15px;
     }
     #social-section .right .img-div
     {
-        padding: 0 40px 50px;
+        padding: 0 20px 50px;
+    }
+
+    #blogsection
+    {
+        padding: 5% 0 20% 0;
     }
     #blogsection .right
     {
@@ -1473,6 +1494,18 @@ path
     #blogsection .owl-dot.active
     {
         width: 25px;
+    }
+    #blogsection .blog-desc .top-blog p, #blogsection .blog-desc .top-blog i
+    {
+        font-size: 12px;
+    }
+    #blogsection .blog-desc h4
+    {
+        font-size: 16px;
+    }
+    .cal-sec
+    {
+        gap:5px;
     }
 
 
@@ -1510,14 +1543,104 @@ path
         width: 80%;
     }
 
+
+    .container
+    {
+        padding: 0 20px !important;
+    }
+    #herosection .container
+    {
+        padding: 0 10px !important;
+    }
     
 }
 
 
-@media only screen and (max-width: 320px)
+@media only screen and (max-width: 380px)
 {
+    #herobanner-section .left .banner-social
+    {
+        gap:15px;
+    }
+    #herobanner-section .left .banner-social svg
+    {
+        width: 20px;
+    }
     .container
     {
-        padding: 0 10px !important;
+        padding: 0 15px !important;
+    }
+    #herosection .container
+    {
+        padding: 0 5px !important;
+    }
+    #herobanner-section .banner-title
+    {
+        font-size: 36px;
+    }
+    #herobanner-section .left
+    {
+        margin-top:-100px;
+    }
+
+    .main-title
+    {
+        font-size: 26px;
+    }
+    .main-para
+    {
+        font-size: 14px;
+    }
+    .main-btn
+    {
+        padding: 8px 30px;
+    }
+    .banner-btn
+    {
+        font-size: 14px;
+        padding: 8px 30px;
+    }
+    .service-btn
+    {
+        border: 1px solid #000;
+    }
+    #blogsection .blog-desc .service-btn
+    {
+        font-size: 12px;
+    }
+    .back-logo img
+    {
+        scale: .7;
+    }
+    #blogsection .blog-main
+    {
+        margin-top:20px;
+    }
+
+    #social-section .main-para
+    {
+        font-size: 14px;
+    }
+
+
+
+
+    #footersection .footer-main
+    {
+        background: #000000;
+        border-radius: 20px;
+        padding: 5% 4%;
+    }
+    #footersection
+    {
+        margin:0;
+    }
+    #footersection .footer-1 .footer-logo
+    {
+        padding: 10px 0 0 0;
+    }
+    #footersection .footer-1 .main-para
+    {
+        font-size: 14px;
     }
 }
